Fix UI center align

--- a/src/pages/Profile/ProfileNav/ProfileAvatar/AvatarChoose/AvatarChoose.module.scss
+++ b/src/pages/Profile/ProfileNav/ProfileAvatar/AvatarChoose/AvatarChoose.module.scss
@@ -34,6 +34,7 @@
   display: flex;
   overflow: auto;
   flex-wrap: wrap;
+  justify-content: center;
 
   & > button {
     margin: 10px
